2009-12-31  Jan Moringen  <scymtym@users.sourceforge.net>

	Autoload load path manipulation
	* rudel-compile.el (top level): added autoloaded form that adds
	Rudel directories to `load-path'

2009-12-30  Jan Moringen  <scymtym@users.sourceforge.net>

	Removed unused functions
	* rudel-util.el (rudel-process-object):
	(rudel-set-process-object): removed; this is handled by
	`process-get' and `process-put'

	Use `process-put' and `process-get' instead
	`rudel-set-process-object' and `rudel-process-object'
	* tls/rudel-tls.el (rudel-tls-make-process):
	(rudel-tls-start-tls):
	(rudel-tls-wait-init):
	(rudel-tls-wait-handshake):
	(rudel-tls-established): use `process-put' and `process-get'
	instead `rudel-set-process-object' and `rudel-process-object'

	Better handling of session termination and connection aborts
	* obby/rudel-obby.el (rudel-obby-backend::rudel-connect): new
	error states we-finalized and disconnect; signal proper errors for
	error states they-finalized and we-finalized
	* obby/rudel-obby-server.el
	(rudel-obby-client::initialize-instance): install a sentinel that
	closes the connection
	* obby/rudel-obby-client.el
	(rudel-obby-client-state-we-finalized): used to indicate that we
	closed the connection
	(rudel-obby-client-state-they-finalized::reason): new slot; stores
	for finalization
	(rudel-obby-client-state-they-finalized::rudel-enter): new method;
	store reason and cleanup connection
	(rudel-obby-client-state-disconnected): new class; used to
	indicated that the connection is closed
	(rudel-obby-client-connection-states): added `we-finalized' and
	`disconnected'
	(rudel-obby-connection::initialize-instance): install a sentinel
	that closes the connection
	(rudel-obby-connection::rudel-disconnect): switch to `we-finalize'
	and wait for `disconnected'; added documentation string
	(rudel-obby-connection::rudel-close): added documentation string
	(rudel-obby-connection::rudel-subscribe-to): handle new error
	states
